08-persistent-storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  type: ClusterIP
  selector:
    app: simple-app
  ports:
    - port: 80
      targetPort: 80
